<resources>
    <string name="app_name">FlashCardsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner_title">TITLE</string>
    <string name="dots">⋮</string>
    <string name="required_question">Required: Question</string>
    <string name="question_can_not_be_empty">Question can not be empty</string>
    <string name="optional_answer">Optional: Answer</string>
    <string name="save">SAVE</string>
    <string name="add_new_card">ADD NEW CARD</string>
    <string name="practice">PRACTICE</string>
    <string name="name_example_set">Name: Example set</string>
    <string name="cards_number_0">Cards number = 0</string>
    <string name="choose_set">Choose set</string>
    <string name="show_set">SHOW SET</string>
    <string name="create_new_set">CREATE NEW SET</string>
    <string name="answer_true">TRUE</string>
    <string name="answer_false">FALSE</string>
    <string name="summary">SUMMARY</string>
    <string name="correct_answers">Correct answers:\u0020</string>
    <string name="incorrect_answers">Incorrect answers:\u0020</string>
    <string name="repeat">REPEAT</string>
    <string name="done">DONE</string>
    <string name="required_set_name">Required: Set name</string>
    <string name="set_name_can_not_be_empty">Set name can not be empty</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="card_saved">Card saved</string>
    <string name="card_deleted">Card deleted</string>
    <string name="set_saved">Set saved</string>
    <string name="set_deleted">Set deleted</string>
    <string name="settings">Settings</string>
    <string name="colors">Colors</string>
    <string name="save_theme">SAVE_THEME</string>
    <string name="light_theme_mode">light</string>
    <string name="dark_theme_mode">dark</string>
    <string name="save_a_theme_as_default">Save a %1$s theme as default?</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="as_system">As System</string>
    <string name="warning_delete_set">Are you sure you want to delete this set? All the cards in the set will be deleted too!</string>
    <string name="cancel_cap">CANCEL</string>
    <string name="delete_cap">DELETE</string>
    <string name="warning_delete_card">Are you sure you want to delete this card?</string>
    <string name="please_select_a_set">Please select a set</string>
</resources>